@@ -73,15 +73,12 @@
         <input type="button" class="btn" value="<spring:message code="blame.button.text"/>" onclick="parent.location='<sventon-ui:formatUrl url="${blameLinkUrl}"/>';">
         <input type="button" class="btn" value="<spring:message code="showrawfile.button.text"/>" onmouseover="Tip('<spring:message code="showrawfile.button.tooltip"/>')" onclick="parent.location='<sventon-ui:formatUrl url="${showFileLinkUrl}&format=raw"/>';">
 
-        <c:if test="${!empty committedRevision}">
-          <c:url value="diffprev.svn" var="diffPreviousUrl">
-            <c:param name="path" value="${command.path}${entry.name}" />
-            <c:param name="revision" value="${command.revision}" />
-            <c:param name="name" value="${command.name}" />
-            <c:param name="committedRevision" value="${committedRevision}" />
-          </c:url>
-          <input type="button" class="btn" value="<spring:message code="diffprev.button.text"/>" onmouseover="Tip('<spring:message code="diffprev.button.tooltip" arguments="${committedRevision}"/>')" onclick="parent.location='<sventon-ui:formatUrl url="${diffPreviousUrl}"/>';">
-        </c:if>
+        <c:url value="diffprev.svn" var="diffPreviousUrl">
+          <c:param name="path" value="${command.path}${entry.name}" />
+          <c:param name="revision" value="${command.revision}" />
+          <c:param name="name" value="${command.name}" />
+        </c:url>
+        <input type="button" class="btn" value="<spring:message code="diffprev.button.text"/>" onmouseover="Tip('<spring:message code="diffprev.button.tooltip" arguments="${command.path},${command.revision}"/>')" onclick="parent.location='<sventon-ui:formatUrl url="${diffPreviousUrl}"/>';">
       </c:otherwise>
     </c:choose>
     <%@ include file="/WEB-INF/jspf/charsetSelectList.jspf"%>
@@ -170,6 +167,14 @@
       </c:if>
     </c:url>
     <input type="button" class="btn" value="<spring:message code="wrap-nowrap.button.text"/>" onclick="toggleWrap();">
+
+    <c:url value="diffprev.svn" var="diffPreviousUrl">
+      <c:param name="path" value="${diffCommand.fromPath}" />
+      <c:param name="revision" value="${diffCommand.fromRevision}" />
+      <c:param name="name" value="${command.name}" />
+    </c:url>
+    <input type="button" class="btn" value="<spring:message code="diffprev.button.text"/>" onmouseover="Tip('<spring:message code="diffprev.button.tooltip" arguments="${diffCommand.fromPath},${diffCommand.fromRevision}"/>')" onclick="parent.location='<sventon-ui:formatUrl url="${diffPreviousUrl}"/>';">
+
     <select name="diffStyle" class="sventonSelect" onchange="document.location.href=this.options[this.selectedIndex].value;">
       <option value="<sventon-ui:formatUrl url="${diffUrl}"/>&style=inline"
           ${pageName == 'showInlineDiff' ? 'selected' : ''}>Inline</option>
